// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchField should render correctly 1`] = `
<DocumentFragment>
  .cache-qibkhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-qibkhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.cache-qibkhh>* {
  margin: 6px;
}

.cache-1qk78jd {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.cache-1qk78jd::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-qibkhh"
    >
      <input
        aria-label="test"
        class="cache-1qk78jd"
        name="test"
        placeholder="placeholder"
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-qibkhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-qibkhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.cache-qibkhh>* {
  margin: 6px;
}

<form
    novalidate=""
  >
    <div
      class="cache-qibkhh"
    />
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with default tags 1`] = `
<DocumentFragment>
  .cache-qibkhh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 8px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.cache-qibkhh:focus-within {
  border: 1px solid #4f0599;
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.25);
}

.cache-qibkhh>* {
  margin: 6px;
}

.cache-1bpmvef-StyledContainer-base {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.cache-1vwmh8m-StyledText {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.cache-fjo0m4-StyledTouchable-StyledTouchable {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-fjo0m4-StyledTouchable-StyledTouchable[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-fjo0m4-StyledTouchable-StyledTouchable[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-fjo0m4-StyledTouchable-StyledTouchable:hover,
.cache-fjo0m4-StyledTouchable-StyledTouchable:focus {
  background-color: #eeeeff;
}

.cache-fjo0m4-StyledTouchable-StyledTouchable:hover svg,
.cache-fjo0m4-StyledTouchable-StyledTouchable:focus svg {
  fill: #4f0599;
}

.cache-1vsf6gj-StyledIcon-sizeStyles {
  fill: #b2b6c3;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1vsf6gj-StyledIcon-sizeStyles.cache-1vsf6gj-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-1qk78jd {
  font-size: 16px;
  color: #4a4f62;
  border: none;
  outline: none;
  background-color: #fff;
}

.cache-1qk78jd::-webkit-input-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd::-moz-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd:-ms-input-placeholder {
  color: #b2b6c3;
}

.cache-1qk78jd::placeholder {
  color: #b2b6c3;
}

<form
    novalidate=""
  >
    <div
      class="cache-qibkhh"
    >
      <div
        class="e1vt8sjg2 cache-1bpmvef-StyledContainer-base"
      >
        <span
          aria-disabled="false"
          class="cache-1vwmh8m-StyledText e1vt8sjg1"
        >
          tags-1
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 e1kgqxfn0 cache-fjo0m4-StyledTouchable-StyledTouchable"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1vsf6gj-StyledIcon-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </div>
      <div
        class="e1vt8sjg2 cache-1bpmvef-StyledContainer-base"
      >
        <span
          aria-disabled="false"
          class="cache-1vwmh8m-StyledText e1vt8sjg1"
        >
          tags-2
        </span>
        <button
          aria-disabled="false"
          aria-label="Close tag"
          class="e1vt8sjg0 e1kgqxfn0 cache-fjo0m4-StyledTouchable-StyledTouchable"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1vsf6gj-StyledIcon-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            />
          </svg>
        </button>
      </div>
      <input
        aria-label="test-tags"
        class="cache-1qk78jd"
        name="test-tags"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </form>
</DocumentFragment>
`;
